--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "foundation-sites": "6.4.3",
-    "motion-ui": "^1.2.3"
+    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-regular-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "foundation-sites": "^6.5.3",
+    "jquery": "^3.3.1",
+    "motion-ui": "^2.0.3",
+    "what-input": "^5.1.3"
+  },
+  "devDependencies": {
+    "expose-loader": "^0.7.5",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
