--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
   - name: automatic merge for Dependabot pull requests
     conditions:
       - author=dependabot-preview[bot]
-      - status-success=ci/circleci: build
+      - status-success="ci/circleci: build"
     actions:
       merge:
         method: squash
