--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
-language: ruby
-rvm:
-  - 2.2
-
-script: bundle exec middleman build
+language: csharp
+mono: none
+dotnet: 3.1
+install:
+  - dotnet tool install -g Microsoft.Web.LibraryManager.Cli
+script:
+  - libman restore
+  - dotnet restore
+  - dotnet run -c Release
